--- a/InstagramRecreated/Base.lproj/Main.storyboard
+++ b/InstagramRecreated/Base.lproj/Main.storyboard
@@ -121,36 +121,100 @@
                                 <rect key="frame" x="0.0" y="136" width="414" height="760"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="268" id="Fo2-ar-e8C" customClass="PostCell">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="268"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="PostCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="518" id="1vx-BQ-axZ" customClass="PostCell">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="518"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fo2-ar-e8C" id="3OC-AA-biP">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="268"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1vx-BQ-axZ" id="iRR-k1-VH3">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="518"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BGG-6c-tCA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="221.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y9H-GH-AW5">
+                                                    <rect key="frame" x="0.0" y="58" width="414" height="243.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Y9H-GH-AW5" secondAttribute="height" multiplier="34:20" id="n9Z-zu-2QZ"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNU-JX-3QQ">
-                                                    <rect key="frame" x="20" y="229.5" width="374" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="09 Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3LP-Sy-n0A" userLabel="likes">
+                                                    <rect key="frame" x="20" y="348.5" width="374" height="18"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_tab" translatesAutoresizingMaskIntoConstraints="NO" id="QZI-w6-W8C">
+                                                    <rect key="frame" x="20" y="8" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="35" id="DRS-eM-w4s"/>
+                                                        <constraint firstAttribute="height" constant="35" id="R0K-Pz-wQQ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clX-K0-Oxu">
+                                                    <rect key="frame" x="63" y="16.5" width="336" height="18"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E42-nc-9nm">
+                                                    <rect key="frame" x="0.0" y="309.5" width="46" height="31"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYQ-KH-O4Z">
+                                                    <rect key="frame" x="113" y="309.5" width="44.5" height="31"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up" catalog="system"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eA2-q2-Of7">
+                                                    <rect key="frame" x="56" y="309.5" width="47" height="31"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="message" catalog="system"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="08/07/2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ngn-Us-Oca">
+                                                    <rect key="frame" x="20" y="399" width="359" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum blablabla" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p66-YW-UzT">
+                                                    <rect key="frame" x="20" y="374.5" width="359" height="16.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="CNU-JX-3QQ" firstAttribute="top" secondItem="BGG-6c-tCA" secondAttribute="bottom" constant="8" id="72K-KC-ji3"/>
-                                                <constraint firstAttribute="trailing" secondItem="BGG-6c-tCA" secondAttribute="trailing" id="APE-Bq-RFo"/>
-                                                <constraint firstItem="BGG-6c-tCA" firstAttribute="leading" secondItem="3OC-AA-biP" secondAttribute="leading" id="MoQ-6B-4p4"/>
-                                                <constraint firstItem="BGG-6c-tCA" firstAttribute="top" secondItem="3OC-AA-biP" secondAttribute="top" id="VwG-dT-uYa"/>
-                                                <constraint firstItem="CNU-JX-3QQ" firstAttribute="leading" secondItem="3OC-AA-biP" secondAttribute="leading" constant="20" id="ZTF-Pu-7PI"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="CNU-JX-3QQ" secondAttribute="bottom" constant="7" id="nhC-k6-EaG"/>
-                                                <constraint firstAttribute="trailing" secondItem="CNU-JX-3QQ" secondAttribute="trailing" constant="20" id="psD-dl-7Qa"/>
+                                                <constraint firstItem="p66-YW-UzT" firstAttribute="top" secondItem="3LP-Sy-n0A" secondAttribute="bottom" constant="8" symbolic="YES" id="546-NF-nn0"/>
+                                                <constraint firstItem="E42-nc-9nm" firstAttribute="top" secondItem="Y9H-GH-AW5" secondAttribute="bottom" constant="8" id="5US-vZ-bmM"/>
+                                                <constraint firstAttribute="trailing" secondItem="Y9H-GH-AW5" secondAttribute="trailing" id="88T-wQ-slr"/>
+                                                <constraint firstItem="QZI-w6-W8C" firstAttribute="top" secondItem="iRR-k1-VH3" secondAttribute="top" constant="8" id="9s2-mL-gk2"/>
+                                                <constraint firstItem="xYQ-KH-O4Z" firstAttribute="leading" secondItem="eA2-q2-Of7" secondAttribute="trailing" constant="10" id="CZU-EE-MkU"/>
+                                                <constraint firstItem="Y9H-GH-AW5" firstAttribute="top" secondItem="QZI-w6-W8C" secondAttribute="bottom" constant="15" id="Eqn-Ym-hW7"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Ngn-Us-Oca" secondAttribute="bottom" constant="10" id="HSz-JM-zhN"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="p66-YW-UzT" secondAttribute="trailing" constant="15" id="J6x-4P-gmY"/>
+                                                <constraint firstItem="Y9H-GH-AW5" firstAttribute="leading" secondItem="iRR-k1-VH3" secondAttribute="leading" id="OXF-PE-AW1"/>
+                                                <constraint firstItem="eA2-q2-Of7" firstAttribute="centerY" secondItem="E42-nc-9nm" secondAttribute="centerY" id="OXh-KL-SSw"/>
+                                                <constraint firstAttribute="trailing" secondItem="clX-K0-Oxu" secondAttribute="trailing" constant="15" id="Pdw-ZU-azF"/>
+                                                <constraint firstItem="QZI-w6-W8C" firstAttribute="leading" secondItem="iRR-k1-VH3" secondAttribute="leading" constant="20" symbolic="YES" id="PfE-bo-gcL"/>
+                                                <constraint firstItem="E42-nc-9nm" firstAttribute="leading" secondItem="Y9H-GH-AW5" secondAttribute="leading" id="TY5-0d-D9I"/>
+                                                <constraint firstItem="xYQ-KH-O4Z" firstAttribute="centerY" secondItem="E42-nc-9nm" secondAttribute="centerY" id="XRu-rB-VKZ"/>
+                                                <constraint firstItem="3LP-Sy-n0A" firstAttribute="top" secondItem="E42-nc-9nm" secondAttribute="bottom" constant="8" id="YSK-cr-eau"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="3LP-Sy-n0A" secondAttribute="trailing" id="Z4g-xd-TgG"/>
+                                                <constraint firstItem="clX-K0-Oxu" firstAttribute="centerY" secondItem="QZI-w6-W8C" secondAttribute="centerY" id="eBV-Xq-ou4"/>
+                                                <constraint firstItem="p66-YW-UzT" firstAttribute="leading" secondItem="iRR-k1-VH3" secondAttribute="leadingMargin" id="eyD-dE-SeO"/>
+                                                <constraint firstItem="Ngn-Us-Oca" firstAttribute="top" secondItem="p66-YW-UzT" secondAttribute="bottom" constant="8" id="ghu-BJ-VdX"/>
+                                                <constraint firstItem="Ngn-Us-Oca" firstAttribute="leading" secondItem="iRR-k1-VH3" secondAttribute="leadingMargin" id="k1H-hp-jrg"/>
+                                                <constraint firstItem="clX-K0-Oxu" firstAttribute="leading" secondItem="QZI-w6-W8C" secondAttribute="trailing" constant="8" id="pot-4A-x9Z"/>
+                                                <constraint firstItem="3LP-Sy-n0A" firstAttribute="leading" secondItem="iRR-k1-VH3" secondAttribute="leadingMargin" id="u2L-Or-ezu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ngn-Us-Oca" secondAttribute="trailing" constant="15" id="uxR-ic-ljk"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="3LP-Sy-n0A" secondAttribute="bottom" constant="15" id="x5v-W1-paN"/>
+                                                <constraint firstItem="eA2-q2-Of7" firstAttribute="leading" secondItem="E42-nc-9nm" secondAttribute="trailing" constant="10" id="yG3-JP-BqK"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="captionPost" destination="CNU-JX-3QQ" id="BST-2H-6kT"/>
-                                            <outlet property="imagePost" destination="BGG-6c-tCA" id="oou-cM-t77"/>
+                                            <outlet property="captionPost" destination="p66-YW-UzT" id="ekQ-4u-hX7"/>
+                                            <outlet property="datePost" destination="Ngn-Us-Oca" id="GCt-zE-vEP"/>
+                                            <outlet property="imagePost" destination="Y9H-GH-AW5" id="ZRs-u3-UKL"/>
+                                            <outlet property="likesPost" destination="3LP-Sy-n0A" id="KGc-27-N1z"/>
+                                            <outlet property="usernamePost" destination="clX-K0-Oxu" id="5xe-ZI-fbD"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -180,7 +244,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TA0-W6-n8Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1942" y="82"/>
+            <point key="canvasLocation" x="1940.5797101449277" y="81.696428571428569"/>
         </scene>
         <!--Compose Controller-->
         <scene sceneID="rwL-WB-ouW">
@@ -297,7 +361,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="insta_camera_btn" width="25" height="25"/>
+        <image name="message" catalog="system" width="128" height="113"/>
+        <image name="profile_tab" width="25" height="25"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
